fix(Computer): 스트라이크 갯수 반환 기능수정